Get all learnings of a student
